Bug 23957 - ld terminated with signal 10 [Bus error] linking libgnat-4.0.sl
Summary: ld terminated with signal 10 [Bus error] linking libgnat-4.0.sl
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: ada (show other bugs)
Version: 4.1.0
: P2 normal
Target Milestone: 4.1.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
: 23958 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-09-18 23:00 UTC by John David Anglin
Modified: 2005-10-23 23:00 UTC (History)
1 user (show)

See Also:
Host: hppa2.0w-hp-hpux11.11
Target: hppa2.0w-hp-hpux11.11
Build: hppa2.0w-hp-hpux11.11
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John David Anglin 2005-09-18 23:00:44 UTC
cd rts; ../../xgcc -B../../ -shared -g -O2 \
        -fPIC \
        -o libgnat-4.0.sl \
        a-caldel.o a-calend.o a-cdlili.o a-cgaaso.o a-cgarso.o a-cgcaso.o a-chac
on.o a-chahan.o a-charac.o a-chlat1.o a-chlat9.o a-chtgke.o a-chtgop.o a-chzla1.
o a-chzla9.o a-cidlli.o a-cihama.o a-cihase.o a-ciorma.o a-ciormu.o a-ciorse.o a
-cohama.o a-cohase.o a-cohata.o a-coinve.o a-colien.o a-colire.o a-comlin.o a-co
ntai.o a-convec.o a-coorma.o a-coormu.o a-coorse.o a-coprnu.o a-crbltr.o a-crbtg
k.o a-crbtgo.o a-cwila1.o a-cwila9.o a-decima.o a-diocst.o a-direct.o a-direio.o
 a-dirval.o a-einuoc.o a-elchha.o a-except.o a-exctra.o a-filico.o a-finali.o a-
flteio.o a-fwteio.o a-inteio.o a-ioexce.o a-iwteio.o a-lfteio.o a-lfwtio.o a-lfz
tio.o a-liteio.o a-liwtio.o a-liztio.o a-llftio.o a-llfwti.o a-llfzti.o a-llitio
.o a-lliwti.o a-llizti.o a-ncelfu.o a-ngcefu.o a-ngcoty.o a-ngelfu.o a-nlcefu.o
a-nlcoty.o a-nlelfu.o a-nllcef.o a-nllcty.o a-nllefu.o a-nscefu.o a-nscoty.o a-n
selfu.o a-nucoty.o a-nudira.o a-nuelfu.o a-nuflra.o a-numaux.o a-numeri.o a-rbtg
so.o a-secain.o a-sequio.o a-sfteio.o a-sfwtio.o a-sfztio.o a-shcain.o a-siocst.
o a-siteio.o a-siwtio.o a-siztio.o a-slcain.o a-ssicst.o a-ssitio.o a-ssiwti.o a
-ssizti.o a-stmaco.o a-storio.o a-strbou.o a-stream.o a-strfix.o a-strhas.o a-st
ring.o a-strmap.o a-strsea.o a-strsup.o a-strunb.o a-ststio.o a-stunau.o a-stunh
a.o a-stwibo.o a-stwifi.o a-stwiha.o a-stwima.o a-stwise.o a-stwisu.o a-stwiun.o
 a-stzbou.o a-stzfix.o a-stzhas.o a-stzmap.o a-stzsea.o a-stzsup.o a-stzunb.o a-
suteio.o a-swmwco.o a-swunau.o a-swuwha.o a-swuwti.o a-szmzco.o a-szunau.o a-szu
zha.o a-szuzti.o a-tags.o a-tgdico.o a-teioed.o a-textio.o a-ticoau.o a-ticoio.o
 a-tideau.o a-tideio.o a-tienau.o a-tienio.o a-tifiio.o a-tiflau.o a-tiflio.o a-
tigeau.o a-tiinau.o a-tiinio.o a-timoau.o a-timoio.o a-tiocst.o a-titest.o a-tiu
nio.o a-unccon.o a-uncdea.o a-wichun.o a-widcha.o a-witeio.o a-wtcoau.o a-wtcoio
.o a-wtcstr.o a-wtdeau.o a-wtdeio.o a-wtedit.o a-wtenau.o a-wtenio.o a-wtfiio.o
a-wtflau.o a-wtflio.o a-wtgeau.o a-wtinau.o a-wtinio.o a-wtmoau.o a-wtmoio.o a-w
ttest.o a-wwunio.o a-zchara.o a-zchuni.o a-ztcoau.o a-ztcoio.o a-ztcstr.o a-ztde
au.o a-ztdeio.o a-ztedit.o a-ztenau.o a-ztenio.o a-ztexio.o a-ztfiio.o a-ztflau.
o a-ztflio.o a-ztgeau.o a-ztinau.o a-ztinio.o a-ztmoau.o a-ztmoio.o a-zttest.o a
-zzunio.o ada.o calendar.o g-arrspl.o g-awk.o g-bubsor.o g-busora.o g-busorg.o g
-calend.o g-casuti.o g-catiio.o g-cgi.o g-cgicoo.o g-cgideb.o g-comlin.o g-comve
r.o g-crc32.o g-ctrl_c.o g-curexc.o g-debuti.o g-debpoo.o g-diopit.o g-dirope.o
g-dyntab.o g-dynhta.o g-except.o g-excact.o g-exctra.o g-expect.o g-flocon.o g-h
easor.o g-hesora.o g-hesorg.o g-htable.o g-io.o g-io_aux.o g-locfil.o g-md5.o g-
memdum.o g-moreex.o g-os_lib.o g-pehage.o g-regexp.o g-regpat.o g-sestin.o g-soc
con.o g-socket.o g-socthi.o g-soliop.o g-souinf.o g-speche.o g-spipat.o g-spitbo
.o g-sptabo.o g-sptain.o g-sptavs.o g-string.o g-strspl.o g-table.o g-tasloc.o g
-traceb.o g-utf_32.o g-wistsp.o g-zstspl.o gnat.o i-c.o i-cexten.o i-cobol.o i-c
point.o i-cpp.o i-cstrea.o i-cstrin.o i-fortra.o i-pacdec.o interfac.o ioexcept.
o machcode.o s-addima.o s-addope.o s-arit64.o s-assert.o s-atacco.o s-auxdec.o s
-bitops.o s-boarop.o s-carsi8.o s-carun8.o s-casi16.o s-casi32.o s-casi64.o s-ca
suti.o s-caun16.o s-caun32.o s-caun64.o s-chepoo.o s-crtl.o s-crc32.o s-direio.o
 s-errrep.o s-exctab.o s-exnint.o s-exnllf.o s-exnlli.o s-expint.o s-explli.o s-
expllu.o s-expmod.o s-expuns.o s-fatflt.o s-fatgen.o s-fatlfl.o s-fatllf.o s-fat
sfl.o s-ficobl.o s-fileio.o s-finimp.o s-finroo.o s-fore.o s-geveop.o s-htable.o
 s-imgbiu.o s-imgboo.o s-imgcha.o s-imgdec.o s-imgenu.o s-imgint.o s-imgllb.o s-
imglld.o s-imglli.o s-imgllu.o s-imgllw.o s-imgrea.o s-imguns.o s-imgwch.o s-img
wiu.o s-io.o s-gloloc.o s-maccod.o s-mantis.o s-mastop.o s-osprim.o s-pack03.o s
-pack05.o s-pack06.o s-pack07.o s-pack09.o s-pack10.o s-pack11.o s-pack12.o s-pa
ck13.o s-pack14.o s-pack15.o s-pack17.o s-pack18.o s-pack19.o s-pack20.o s-pack2
1.o s-pack22.o s-pack23.o s-pack24.o s-pack25.o s-pack26.o s-pack27.o s-pack28.o
 s-pack29.o s-pack30.o s-pack31.o s-pack33.o s-pack34.o s-pack35.o s-pack36.o s-
pack37.o s-pack38.o s-pack39.o s-pack40.o s-pack41.o s-pack42.o s-pack43.o s-pac
k44.o s-pack45.o s-pack46.o s-pack47.o s-pack48.o s-pack49.o s-pack50.o s-pack51
.o s-pack52.o s-pack53.o s-pack54.o s-pack55.o s-pack56.o s-pack57.o s-pack58.o
s-pack59.o s-pack60.o s-pack61.o s-pack62.o s-pack63.o s-parame.o s-parint.o s-p
ooglo.o s-pooloc.o s-poosiz.o s-powtab.o s-purexc.o s-restri.o s-rident.o s-rpc.
o s-scaval.o s-secsta.o s-sequio.o s-shasto.o s-sopco3.o s-sopco4.o s-sopco5.o s
-stache.o s-stchop.o s-stalib.o s-stoele.o s-stopoo.o s-stratt.o s-strops.o s-so
flin.o s-memory.o s-memcop.o s-traceb.o s-traces.o s-traent.o s-unstyp.o s-vaflo
p.o s-valboo.o s-valcha.o s-valdec.o s-valenu.o s-valint.o s-vallld.o s-vallli.o
 s-valllu.o s-valrea.o s-valuns.o s-valuti.o s-valwch.o s-veboop.o s-vector.o s-
vercon.o s-vmexta.o s-wchcnv.o s-wchcon.o s-wchjis.o s-wchstw.o s-wchwts.o s-wid
boo.o s-widcha.o s-widenu.o s-widlli.o s-widllu.o s-widwch.o s-wwdcha.o s-wwdenu
.o s-wwdwch.o system.o text_io.o  adaint.o argv.o cio.o cstreams.o ctrl_c.o errn
o.o exit.o raise.o sysdep.o aux-io.o init.o initialize.o seh_init.o cal.o final.
o tracebak.o expect.o mkdir.o socket.o  \
        -Wl,+h,libgnat-4.0.sl \
         -lm
collect2: ld terminated with signal 10 [Bus error], core dumped
make[5]: *** [gnatlib-shared-default] Error 1
make[5]: Leaving directory `/xxx/gnu/gcc-3.3/objdir/gcc/ada'
make[4]: *** [gnatlib-shared-dual] Error 2
make[4]: Leaving directory `/xxx/gnu/gcc-3.3/objdir/gcc/ada'
make[3]: *** [gnatlib-shared] Error 2
make[3]: Leaving directory `/xxx/gnu/gcc-3.3/objdir/gcc/ada'
make[2]: *** [gnatlib-shared] Error 2
make[2]: Leaving directory `/xxx/gnu/gcc-3.3/objdir/hppa2.0w-hp-hpux11.11/libada
'
make[1]: *** [all-target-libada] Error 2
make[1]: Leaving directory `/xxx/gnu/gcc-3.3/objdir'
make: *** [bootstrap] Error 2
Sun Sep 18 17:03:01 EDT 2005

I've been working on dwarf2 support for hpux.  I believe that the above
problemis __gnat_eh_personality isn't corrrectly typed as a code symbol.
If a symbol isn't exported, the default type under hpux is data.
Comment 1 John David Anglin 2005-09-18 23:08:37 UTC
Patch here http://gcc.gnu.org/ml/gcc-patches/2005-09/msg01123.html.
Comment 2 GCC Commits 2005-10-23 18:43:39 UTC
Subject: Bug 23957

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	danglin@gcc.gnu.org	2005-10-23 18:43:30

Modified files:
	gcc            : ChangeLog except.c 

Log message:
	PR ada/23957
	* except.c (output_function_exception_table): Call
	assemble_external_libcall if we need a personality function.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.10203&r2=2.10204
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/except.c.diff?cvsroot=gcc&r1=1.317&r2=1.318

Comment 3 John David Anglin 2005-10-23 18:44:56 UTC
Fixed.
Comment 4 Andrew Pinski 2005-10-23 18:50:47 UTC
*** Bug 23958 has been marked as a duplicate of this bug. ***