	PR ada/23957 	* except.c (output_function_exception_table): Call 	assemble_external_libcall if we need a personality function.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105819 138bc75d-0d04-0410-961f-82ee72b054a4